--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.26.8",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "css-loader": "^7.1.2",
+    "framer-motion": "^12.4.2",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
+    "style-loader": "^4.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "nodemon --watch src --exec \"react-scripts start\"",
-    "build": "react-scripts build",
+    "start": "webpack serve --config webpack.dev.js --mode development",
+    "build": "webpack --config webpack.prod.js --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,6 +44,12 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@babel/preset-env": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^9.2.1",
+    "interpolate-html-plugin": "^4.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
