--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "framer-motion": "^12.4.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
