--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "css-loader": "^7.1.2",
     "framer-motion": "^12.4.2",
     "html-webpack-plugin": "^5.6.3",
+    "jwt-decode": "^4.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
