--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
