Newsletter subscription email implemented

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ PORT=3000
 MONGO_URI=mongodb+srv://0211nidhi:bc9QorwI5oqfMceW@localegems.uaqkj.mongodb.net/LocaleGems
 JWT_SECRET=8d9f7e6c2b4a1d3e5f0g8h9i2j4k6l7m
 GOOGLE_MAPS_API_KEY=AIzaSyBjtFtbiQ2Nheh0VBWQAq5LSqs6QrACWBE
+EMAIL_USER=pmaharjanrocks@gmail.com
+EMAIL_PASS=qzbpliummgtojijl
