--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.5",
     "style-loader": "^4.0.0",
     "web-vitals": "^4.2.4"
   },
