--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "css-loader": "^7.1.2",
     "framer-motion": "^12.4.2",
     "html-webpack-plugin": "^5.6.3",
+    "i18next": "^24.2.3",
     "jwt-decode": "^4.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "moment": "^2.30.1",
@@ -20,6 +21,7 @@
     "react-bootstrap-icons": "^1.11.5",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
