--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "react-share": "^5.2.2",
     "react-toastify": "^11.0.5",
     "style-loader": "^4.0.0",
     "web-vitals": "^4.2.4"
