--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^24.2.3",
