--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
     "css-loader": "^7.1.2",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.4.2",
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^24.2.3",
@@ -22,6 +22,7 @@
     "react-bootstrap-icons": "^1.11.5",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
